--- a/css/compiled/sign-up.css
+++ b/css/compiled/sign-up.css
@@ -1,6 +1,6 @@
 /* Sign Up Option 1 */
 #sign_up1 {
-  background: url("../../img/backgrounds/ocean.jpg") no-repeat;
+  background: url("../../img/backgrounds/mango.jpg") no-repeat;
   display: block;
   height: 540px;
   margin-bottom: 90px;
