about to add suggestions

--- a/partials/add.html
+++ b/partials/add.html
@@ -1,1 +1,36 @@
-add
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
+
+<p>API Name: <input type="text"/></p>
+<p>Icon: <input type="text"/></p>
+
+<br/>
+
+
+<h2>Authorization</h2>
+<p>Auth Type: <input type="text"/></p>
+
+
+<br/>
+<h2>Endpoints</h2>
+<p>Title: <input type="text"/></p>
+<p>Url: <input type="text"/></p>
+<p>Methods: <input type="text"/></p>
+<p>Params: <input type="text"/></p>
+<p>Returns: <input type="text"/></p>
+<select name="" id="">
+  <option value="photo">photo</option>
+  <option value="">hello</option>
+  <option value="hello">hello</option>
+</select>
+
+
+
+
+
