--- a/partials/home.html
+++ b/partials/home.html
@@ -1,3 +1,20 @@
+<!--create  wordle for twitter tweets with #launch-->
+<!--create-->
+<!--(green)create <i>wordle-->
+<!--(green)create <i>wordle for (in ignore list) <i>twitter -->
+<!--- tweets -->
+<!--- users -->
+<!--- trends -->
+<!--(green)create <i>wordle for (in ignore list) <i>twitter tweets-->
+<!--containing-->
+<!--from-->
+<!--to-->
+<!--(green)create <i>wordle for (in ignore list) <i>twitter tweets containing-->
+<!--hashtag-->
+<!--text-->
+<!--(green)create <i>wordle for (in ignore list) <i>twitter tweets containing hashtag-->
+<!-- shows top trends-->
+
 <div id="sign_up1" class="animated fadeInDown">
 
   <!-- todo dont make this so static -->
@@ -6,8 +23,12 @@
   <div class="col-md-3"></div>
   <div class="col-md-6 animated zoomIn" style="-webkit-animation-delay: .5s;">
     <h2 >
-      Our One Line Tag Line Here
+      The First API Engine
     </h2>
+    <!--// todo make this look better-->
+    <h3>
+      Save Time Implementing API's
+    </h3>
     <br/>
     <br/>
     <h3>Create Your Own Flow</h3>
