--- a/partials/flow.html
+++ b/partials/flow.html
@@ -6,6 +6,12 @@
     >
 
 </div>
+<button class="btn btn-default" style="float: right;float: right; padding: 6px; position: relative; top: -34px; left: 15px;" id='sideButtonForFlow'>
+  <i class="fa fa-check-circle" style="color: green;" ng-show="flow.status === \'valid\'"></i>
+  <i class="fa fa-close" style="color: red;" ng-show="flow.status === \'invalid\'"></i>
+  {{flow.status}}
+</button>
+
 <div ng-repeat="suggestion in flow.suggestions">
   <button class="btn btn-default" style="margin-top: 5px;" ng-show="{{suggestion.type === 'append'}}" ng-click="flow.suggestions=suggestion.suggestions;append(suggestion.text);">{{suggestion.text}} </button>
 </div>
