--- a/partials/flow.html
+++ b/partials/flow.html
@@ -6,15 +6,16 @@
     >
 
 </div>
-<button class="btn btn-default" style="float: right;float: right; padding: 6px; position: relative; top: -34px; left: 15px;" id='sideButtonForFlow'>
-  <i class="fa fa-check-circle" style="color: green;" ng-show="flow.status === \'valid\'"></i>
-  <i class="fa fa-close" style="color: red;" ng-show="flow.status === \'invalid\'"></i>
-  {{flow.status}}
+<button class="btn btn-default" style="float: right;float: right; padding: 6px; position: relative; top: -34px; left: 15px; padding-left: 10px; padding-right: 10px;;" id='sideButtonForFlow'>
+  <i class="fa fa-circle-o" ng-show="flow.status === 'starting'"></i>
+  <i class="fa fa-check" style="color: green;" ng-show="flow.status === 'valid'"
+     ng-click=""
+      ></i>
+  <i class="fa fa-close" style="color: red;" ng-show="flow.status === 'invalid'"></i>
+  <i class="fa fa-circle-o-notch fa-spin" ng-show="flow.status === 'loading'"></i>
 </button>
+
 
 <div ng-repeat="suggestion in flow.suggestions">
   <button class="btn btn-default" style="margin-top: 5px;" ng-show="{{suggestion.type === 'append'}}" ng-click="flow.suggestions=suggestion.suggestions;append(suggestion.text);">{{suggestion.text}} </button>
 </div>
-
-
-{{flow.text}}
