--- a/partials/flow.html
+++ b/partials/flow.html
@@ -28,7 +28,7 @@
 
 
 
-<button class="btn btn-default" style="float: right;float: right; padding: 6px; position: relative; top: -34px; left: 15px; padding-left: 10px; padding-right: 10px;;" id='sideButtonForFlow' ng-controller="ModalDemoCtrl" ng-click="open()">
+<button class="btn btn-default" style="float: right;float: right; padding: 6px; position: relative; top: -34px; left: 15px; padding-left: 10px; padding-right: 10px;;" id='sideButtonForFlow' ng-controller="ModalDemoCtrl" ng-click="open()" tabindex="-1">
   <i class="fa fa-circle-o" ng-show="flow.status === 'starting'"></i>
   <i class="fa fa-check" style="color: green;" ng-show="flow.status === 'valid'"></i>
   <i class="fa fa-close" style="color: red;" ng-show="flow.status === 'invalid'"></i>
