added popular flows

--- a/partials/explore.html
+++ b/partials/explore.html
@@ -50,6 +50,14 @@
 </section>
 
 
+<div id="features">
+  <div class="container">
+    <div class="section_header">
+      <h3>Popular Flows</h3>
+    </div>
+  </div>
+</div>
+
 <span ng-controller="popularCtrl">
   <div style="width: 100%;"  ng-repeat="flow in popularFlows">
     <div class="col-md-3" style="height: 50px;"></div>
