--- a/partials/home.html
+++ b/partials/home.html
@@ -46,12 +46,12 @@
     </div>
     <div class="row feature">
       <div class="col-sm-6">
-        <img src="img/showcase1.png" class="img-responsive" />
+        <img src="img/BestBuyToCoinbase.png" class="img-responsive" />
       </div>
       <div class="col-sm-6 info">
         <h3>
-          <img src="img/features-ico1.png" />
-          Beautiful on all devices
+            <i class="fa fa-dollar" style="color: green;"></i>
+          Purchase Best Buy item with Coinbase
         </h3>
         <p>
           There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
@@ -60,12 +60,12 @@
     </div>
     <div class="row feature">
       <div class="col-sm-6 pic-right">
-        <img src="img/showcase2.png" class="pull-right img-responsive" />
+        <img src="img/FacebookToDropbox.png" class="pull-right img-responsive" />
       </div>
       <div class="col-sm-6 info info-left">
         <h3>
           <img src="img/features-ico2.png" />
-          Blog page included
+          Upload Facebook photo to Dropbox
         </h3>
         <p>
           There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
@@ -74,12 +74,12 @@
     </div>
     <div class="row feature">
       <div class="col-sm-6">
-        <img src="img/showcase3.png" class="img-responsive" />
+        <img src="img/FacebookToDropbox.png" class="img-responsive" />
       </div>
       <div class="col-sm-6 info">
         <h3>
           <img src="img/features-ico3.png" />
-          Simple and clean coming soon page
+            Upload Facebook photo to Dropbox
         </h3>
         <p>
           There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
