added a very basic how ti works

--- a/partials/home.html
+++ b/partials/home.html
@@ -37,6 +37,30 @@
   <div class="col-md-3"></div>
 </div>
 
+<div class="container">
+  <div class="section_header">
+    <h3>How it Works</h3>
+    <br/>
+    <br/>
+    <p>
+      API-Flow provides a single endpoint for all your API's. No more searching documentation, frustrating over OAuth, and updating depreciated API calls. Save time and sanity by using API-Flow.
+    </p>
+    <p>1. Type in plain english what you want to accomplish.</p>
+    <p><span style="font-style: italic">Get events from meetup, eventbrite, and facebook from keyword and date range.</span></p>
+    <p>2. Create the flow and save the generated endpoint.</p>
+    <p><span style="font-style: italic">http://www.apiflow.com/user/23423423/flow/238423423</span></p>
+    <p>3. Call the endpoint directly from your code.</p>
+    <p>
+      $.get("http://www.apiflow.com/user/23423423/flow/238423423", function(eventJSON) {
+      <br/>
+      // your single request for eventJSOn
+      <br/>
+      });
+    </p>
+  </div>
+</div>
+
+
 <!-- We'll also add some navigation: -->
 
 <div id="features">
