--- a/partials/about.html
+++ b/partials/about.html
@@ -1,1 +1,82 @@
-about
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<div class="container">
+  <div class="section_header">
+    <h3>How it Works</h3>
+    <br/>
+    <br/>
+    <p>
+      API-Flow provides a <span style="font-weight: bold;">single endpoint</span> for all your API's. No more searching documentation, frustrating over OAuth, and updating depreciated API calls. Save time and sanity by using API-Flow.
+    </p>
+    <p>1. Type in plain english what you want to accomplish.</p>
+    <!--// todo include an icon version here like the textbox-->
+    <p><span style="font-style: italic">Get events from meetup, eventbrite, and facebook from a keyword and a date range.</span></p>
+    <p>2. Create the flow and save the generated endpoint.</p>
+    <p><span style="font-style: italic">http://www.apiflow.com/user/23423423/flow/238423423</span></p>
+    <p>3. Call the endpoint directly from your code.</p>
+    <img src="../img/howVim.png" width="800" alt=""/>
+    <!--<p>-->
+    <!--$.get("http://www.apiflow.com/user/23423423/flow/238423423", function(eventJSON) {-->
+    <!--<br/>-->
+    <!--// your single request for eventJSOn-->
+    <!--<br/>-->
+    <!--});-->
+    <!--</p>-->
+  </div>
+</div>
+
+
+<!-- We'll also add some navigation: -->
+
+<div id="features">
+  <div class="container">
+    <div class="section_header">
+      <h3>Example Flows</h3>
+    </div>
+    <div class="row feature">
+      <div class="col-sm-6">
+        <img src="img/BestBuyToCoinbase.png" class="img-responsive" />
+      </div>
+      <div class="col-sm-6 info">
+        <h3>
+          <i class="fa fa-dollar" style="color: black;"></i>
+          Purchase Best Buy item with Coinbase
+        </h3>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+        </p>
+      </div>
+    </div>
+    <div class="row feature">
+      <div class="col-sm-6 pic-right">
+        <img src="img/CalendarToUber.png" class="pull-right img-responsive" />
+      </div>
+      <div class="col-sm-6 info info-left">
+        <h3>
+          <i class="fa fa-taxi" style="color: black;"></i>
+          Order Uber to next Calendar Event
+        </h3>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+        </p>
+      </div>
+    </div>
+    <div class="row feature">
+      <div class="col-sm-6">
+        <img src="img/FacebookToDropbox.png" class="img-responsive" />
+      </div>
+      <div class="col-sm-6 info">
+        <h3>
+          <i class="fa fa-camera" style="color: black;"></i>
+          Upload Facebook photo to Dropbox
+        </h3>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
