--- a/partials/home.html
+++ b/partials/home.html
@@ -20,101 +20,18 @@
   <!-- todo dont make this so static -->
   <div style="padding-top: 100px; width: 100%;"></div>
 
-  <div class="col-md-3"></div>
-  <div class="col-md-6 animated zoomIn" style="-webkit-animation-delay: .5s;">
-    <h2 >
-      The First API Engine
+  <div class="col-md-8 col-md-offset-2 animated zoomIn" style="-webkit-animation-delay: .5s;">
+    <h2 style="padding-top: 100px; font-family: 'raleway';font-size: 2.6em;">
+    YOU FOCUS ON FUNCTIONALITY, WE FOCUS ON APIS.
     </h2>
+    <p style="color: white; text-align: center; font-size: 1.6em; top: 35px;position: relative">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad commodi odio officiis quod repellat saepe! Adipisci autem, beatae debitis delectus dicta est, fuga molestias quaerat tempora temporibus vitae voluptas!
+    </p>
     <!--// todo make this look better-->
-    <h3>
-      Save Time Implementing API's
-    </h3>
     <br/>
     <br/>
-    <h3>Create Your Own Flow</h3>
+    <h3 style="padding-top: 100px;font-family: 'raleway';">Take it for a spin</h3>
     <flow></flow>
   </div>
-  <div class="col-md-3"></div>
 </div>
-
-<div class="container">
-  <div class="section_header">
-    <h3>How it Works</h3>
-    <br/>
-    <br/>
-    <p>
-      API-Flow provides a single endpoint for all your API's. No more searching documentation, frustrating over OAuth, and updating depreciated API calls. Save time and sanity by using API-Flow.
-    </p>
-    <p>1. Type in plain english what you want to accomplish.</p>
-    <p><span style="font-style: italic">Get events from meetup, eventbrite, and facebook from keyword and date range.</span></p>
-    <p>2. Create the flow and save the generated endpoint.</p>
-    <p><span style="font-style: italic">http://www.apiflow.com/user/23423423/flow/238423423</span></p>
-    <p>3. Call the endpoint directly from your code.</p>
-    <p>
-      $.get("http://www.apiflow.com/user/23423423/flow/238423423", function(eventJSON) {
-      <br/>
-      // your single request for eventJSOn
-      <br/>
-      });
-    </p>
-  </div>
-</div>
-
-
-<!-- We'll also add some navigation: -->
-
-<div id="features">
-  <div class="container">
-    <div class="section_header">
-      <h3>Example Flows</h3>
-    </div>
-    <div class="row feature">
-      <div class="col-sm-6">
-        <img src="img/BestBuyToCoinbase.png" class="img-responsive" />
-      </div>
-      <div class="col-sm-6 info">
-        <h3>
-            <i class="fa fa-dollar" style="color: black;"></i>
-          Purchase Best Buy item with Coinbase
-        </h3>
-        <p>
-          There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
-        </p>
-      </div>
-    </div>
-    <div class="row feature">
-      <div class="col-sm-6 pic-right">
-        <img src="img/CalendarToUber.png" class="pull-right img-responsive" />
-      </div>
-      <div class="col-sm-6 info info-left">
-        <h3>
-            <i class="fa fa-taxi" style="color: black;"></i>
-          Order Uber to next Calendar Event
-        </h3>
-        <p>
-          There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
-        </p>
-      </div>
-    </div>
-    <div class="row feature">
-      <div class="col-sm-6">
-        <img src="img/FacebookToDropbox.png" class="img-responsive" />
-      </div>
-      <div class="col-sm-6 info">
-        <h3>
-            <i class="fa fa-camera" style="color: black;"></i>
-            Upload Facebook photo to Dropbox
-        </h3>
-        <p>
-          There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script>
-</script>
-
-
 
