--- a/css/compiled/theme.css
+++ b/css/compiled/theme.css
@@ -2,13 +2,13 @@ html {
   margin: 0; }
 
 body {
+font-family: 'raleway', Helvetica, arial, sans-serif;
   position: relative;
   -webkit-font-smoothing: antialiased;
-  font-family: 'Lato', sans-serif !important;
   padding-top: 107px;
   line-height: 20px; }
   body h1, body h2, body h3, body h4, body h5, body h6, body .h1, body .h2, body .h3, body .h4, body .h5, body .h6 {
-    font-family: 'Lato', sans-serif !important;
+    /*font-family: 'Lato', sans-serif !important;*/
     font-weight: bold;
     color: inherit;
     text-rendering: optimizelegibility; }
@@ -23,8 +23,8 @@ a:hover {
 input[type="text"],
 input[type="password"],
 input[type="submit"],
-textarea {
-  font-family: 'Lato', Helvetica; }
+/*textarea {*/
+  /*font-family: 'Lato', Helvetica; }*/
 
 body.pull_top {
   padding-top: 0px !important; }
@@ -113,10 +113,10 @@ header {
 -------------------------------------------------- */
 #footer {
   min-height: 260px;
-  margin-top: 140px;
+  /*margin-top: 140px;*/
   background-color: #252528;
   color: #fff;
-  padding-top: 35px;
+  /*padding-top: 35px;*/
   /* testimonials */
   /* contact */
   /* credits */
@@ -183,7 +183,7 @@ header {
       padding: 8px 20px;
       border-radius: 3px;
       font-size: 14px;
-      font-family: Lato !important;
+      /*font-family: Lato !important;*/
       width: 95%;
       -webkit-transition: background-color .2s linear;
       -moz-transition: background-color .2s linear;
