--- a/partials/flow.html
+++ b/partials/flow.html
@@ -1,8 +1,9 @@
-<div class="form-control"
+<div class="form-control "
      contenteditable="true"
      ng-model="flow.text"
      ng-keyup="updateSearch($event)"
      id="flowbox"
+     style="height: 80px; font-size: 2em;padding-top: 20px;"
     >
 
 </div>
@@ -28,11 +29,11 @@
 
 
 
-<button class="btn btn-default" style="float: right;float: right; padding: 6px; position: relative; top: -34px; left: 15px; padding-left: 10px; padding-right: 10px;;" id='sideButtonForFlow' ng-controller="ModalDemoCtrl" ng-click="open()" tabindex="-1">
-  <i class="fa fa-circle-o" ng-show="flow.status === 'starting'"></i>
-  <i class="fa fa-check" style="color: green;" ng-show="flow.status === 'valid'"></i>
-  <i class="fa fa-close" style="color: red;" ng-show="flow.status === 'invalid'"></i>
-  <i class="fa fa-circle-o-notch fa-spin" ng-show="flow.status === 'loading'"></i>
+<button ng-class="flow.status === 'valid' ? 'btn btn-success' : 'btn btn-default'" style="float: right;float: right; padding: 29px; position: relative; top: -80px; left: 82px;" id='sideButtonForFlow' ng-controller="ModalDemoCtrl" ng-click="open()" tabindex="-1">
+  <i class="fa fa-circle-o fa-lg" ng-show="flow.status === 'starting'"></i>
+  <i class="fa fa-check fa-lg" ng-show="flow.status === 'valid'"></i>
+  <i class="fa fa-close" ng-show="flow.status === 'invalid'"></i>
+  <i class="fa fa-circle-o-notch fa-spin fa-lg" ng-show="flow.status === 'loading'"></i>
 </button>
 
 
