added images and colors and more stuff

--- a/css/compiled/sign-up.css
+++ b/css/compiled/sign-up.css
@@ -1,10 +1,24 @@
 /* Sign Up Option 1 */
 #sign_up1 h2, #sign_up1 h3, #sign_up1 h1{
-    color: white;
+    /*color: white;*/
     text-align: center;
 }
+/*#sign_up1 .background {*/
+    /*background: url("../../img/abstractAPIFlow.jpg") no-repeat center center fixed;*/
+    /*-webkit-background-size: cover;*/
+    /*-moz-background-size: cover;*/
+    /*-o-background-size: cover;*/
+    /*background-size: cover;*/
+    /*z-index: 999;*/
+    /*background: url("../../img/abstractAPIFlow.jpg") no-repeat;*/
+    /*height: 90vh;*/
+/*}*/
 #sign_up1 {
-  background: url("../../img/backgrounds/mango.jpg") no-repeat;
+  /*background: url("../../img/AkashFaded2.jpg") no-repeat;*/
+background: url("../../img/backgrounds/mango.jpg") no-repeat;
+    /*background: url("../../img/backgrounds/ocean.jpg") no-repeat;*/
+
+    /*background-o*/
   display: block;
   height: 90vh;
   margin-bottom: 90px;
