--- a/partials/home.html
+++ b/partials/home.html
@@ -15,16 +15,16 @@
 <!--(green)create <i>wordle for (in ignore list) <i>twitter tweets containing hashtag-->
 <!-- shows top trends-->
 
-<div id="sign_up1" class="animated fadeInDown">
+<div id="sign_up1" class="animated fadeInDown" style="color: white;">
 
   <!-- todo dont make this so static -->
   <div style="padding-top: 100px; width: 100%;"></div>
 
   <div class="col-md-8 col-md-offset-2 animated zoomIn" style="-webkit-animation-delay: .5s;">
-    <h2 style="padding-top: 100px; font-family: 'raleway';font-size: 2.6em;">
+    <h2 style="padding-top: 100px; font-family: 'raleway';font-size: 2.6em; color: white;">
     YOU FOCUS ON FUNCTIONALITY, WE FOCUS ON APIS.
     </h2>
-    <p style="color: white; text-align: center; font-size: 1.6em; top: 35px;position: relative">
+    <p style="text-align: center; font-size: 1.6em; top: 35px;position: relative">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad commodi odio officiis quod repellat saepe! Adipisci autem, beatae debitis delectus dicta est, fuga molestias quaerat tempora temporibus vitae voluptas!
     </p>
     <!--// todo make this look better-->
