--- a/partials/home.html
+++ b/partials/home.html
@@ -15,7 +15,7 @@
 <!--(green)create <i>wordle for (in ignore list) <i>twitter tweets containing hashtag-->
 <!-- shows top trends-->
 
-<div id="sign_up1" class="animated fadeInDown" style="color: white;">
+<div id="sign_up1" class="animated fadeInDown" style="color: white; text-align: center;">
 
   <!-- todo dont make this so static -->
   <div style="padding-top: 100px; width: 100%;"></div>
@@ -35,3 +35,16 @@
   </div>
 </div>
 
+
+<div class="row" id="results-voila" style="text-align: center; padding-top: 100px; padding-bottom: 100px;">
+  <div class="col-md-8 col-md-offset-2">
+    <h4 style="font-family: 'raleway'; font-size: 1.5em; color: rgb(255,124,80)">Congratulations, you have successfully created this flow.</h4>
+    <div class="well voila" style="font-size: 2em; margin-top: 80px">
+      http://www.apiflow.com/user/23423423/flow/238423423
+    </div>
+    <span style="margin-top: 25px;">
+      <button class="btn btn-success col-md-3 col-md-offset-3" style="font-size: 1.6em;" ng-click="ok()">Run Now</button>
+      <button class="btn btn-primary col-md-3" ng-click="ok()" style="margin-left: 10px; font-size: 1.6em;">Copy Endpoint</button>
+    </span>
+  </div>
+</div>
