--- a/partials/home.html
+++ b/partials/home.html
@@ -14,6 +14,76 @@
 <!--text-->
 <!--(green)create <i>wordle for (in ignore list) <i>twitter tweets containing hashtag-->
 <!-- shows top trends-->
+<style>
+  /* when hiding the picture */
+  .ng-hide-add         { animation:0.5s lightSpeedOut ease; }
+
+  /* when showing the picture */
+  .ng-hide-remove      { animation:0.5s flipInX ease; }
+
+  /* ANIMATIONS (FROM ANIMATE.CSS) ======================== */
+  /* flip in */
+  @keyframes flipInX {
+    0% {
+      transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+      transition-timing-function: ease-in;
+      opacity: 0;
+    }
+
+    40% {
+      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+      transition-timing-function: ease-in;
+      transition-timing-function: ease-in;
+    }
+
+    60% {
+      transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+      transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+      transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+      opacity: 1;
+    }
+
+    80% {
+      transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+      transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+      transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+    }
+
+    100% {
+      transform: perspective(400px);
+      transform: perspective(400px);
+      transform: perspective(400px);
+    }
+  }
+
+  /* light speed out */
+  @keyframes lightSpeedOut {
+    0% {
+      opacity: 1;
+    }
+
+    100% {
+      transform: translate3d(100%, 0, 0) skewX(30deg);
+      transform: translate3d(100%, 0, 0) skewX(30deg);
+      opacity: 0;
+    }
+  }
+
+  @keyframes lightSpeedOut {
+    0% {
+      opacity: 1;
+    }
+
+    100% {
+      transform: translate3d(100%, 0, 0) skewX(30deg);
+      transform: translate3d(100%, 0, 0) skewX(30deg);
+      transform: translate3d(100%, 0, 0) skewX(30deg);
+      opacity: 0;
+    }
+  }
+</style>
 
 <div id="sign_up1" class="animated fadeInDown" style="color: white; text-align: center;">
 
@@ -36,11 +106,11 @@
 </div>
 
 
-<div class="row" id="results-voila" style="text-align: center; padding-top: 100px; padding-bottom: 100px;">
+<div class="row animated slideInDown" id="results-voila" style="text-align: center; padding-top: 100px; padding-bottom: 100px;" ng-controller="successCtrl" ng-show="data.show">
   <div class="col-md-8 col-md-offset-2">
     <h4 style="font-family: 'raleway'; font-size: 1.5em; color: rgb(255,124,80)">Congratulations, you have successfully created this flow.</h4>
     <div class="well voila" style="font-size: 2em; margin-top: 80px">
-      http://www.apiflow.com/user/23423423/flow/238423423
+      {{data.url}}
     </div>
     <span style="margin-top: 25px;">
       <button class="btn btn-success col-md-3 col-md-offset-3" style="font-size: 1.6em;" ng-click="ok()">Run Now</button>
