only when twitter or facebook will it work

--- a/partials/home.html
+++ b/partials/home.html
@@ -40,11 +40,11 @@
   <div class="col-md-8 col-md-offset-2">
     <h4 style="font-family: 'raleway'; font-size: 1.5em; color: rgb(255,124,80)">Congratulations, you have successfully created this flow.</h4>
     <div class="well voila" style="font-size: 2em; margin-top: 80px">
-      {{data.url}}
+      {{data.visualUrl}}
     </div>
     <span style="margin-top: 25px;">
-      <button class="btn btn-success col-md-3 col-md-offset-3" style="font-size: 1.6em;" ng-click="ok()">Run Now</button>
-      <button class="btn btn-primary col-md-3" ng-click="ok()" style="margin-left: 10px; font-size: 1.6em;">Copy Endpoint</button>
+      <button class="btn btn-success col-md-3 col-md-offset-3" style="font-size: 1.6em;" ng-click="openFlow()">Run Now</button>
+      <button class="btn btn-primary col-md-3" style="margin-left: 10px; font-size: 1.6em;" ng-click="openFlow()">Copy Endpoint</button>
     </span>
   </div>
 </div>
