--- a/partials/home.html
+++ b/partials/home.html
@@ -36,7 +36,7 @@
 </div>
 
 
-<div class="row animated slideInDown" id="results-voila" style="text-align: center; padding-top: 100px; padding-bottom: 100px;" ng-controller="successCtrl" ng-show="data.show">
+<div class="row" id="results-voila" style="text-align: center; padding-top: 100px; padding-bottom: 100px;" ng-controller="successCtrl" ng-show="data.show">
   <div class="col-md-8 col-md-offset-2">
     <h4 style="font-family: 'raleway'; font-size: 1.5em; color: rgb(255,124,80)">Congratulations, you have successfully created this flow.</h4>
     <div class="well voila" style="font-size: 2em; margin-top: 80px">
