removed dummy text on homepage

--- a/partials/home.html
+++ b/partials/home.html
@@ -25,7 +25,7 @@
     YOU FOCUS ON FUNCTIONALITY, WE FOCUS ON APIS.
     </h2>
     <p style="text-align: center; font-size: 1.6em; top: 35px;position: relative">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad commodi odio officiis quod repellat saepe! Adipisci autem, beatae debitis delectus dicta est, fuga molestias quaerat tempora temporibus vitae voluptas!
+      API-Flow provides a <span style="font-weight: bold;">single endpoint</span> for all your API's. No more searching documentation, frustrating over OAuth, and updating depreciated API calls. Save time and sanity by using API-Flow.
     </p>
     <!--// todo make this look better-->
     <br/>
