--- a/partials/explore.html
+++ b/partials/explore.html
@@ -14,7 +14,7 @@
       For the backgrounds, you can combine from the bgs folder :D
   -->
   <article class="slide" id="showcasing" style="background: url('../img/bestBuy.jpg') repeat-x top center;">
-    <!-- <img class="asset left-30 sp600 t120 z1" src="../img/BestBuyToCoinbase.png" /> -->
+    <img class="asset left-30 sp600 t120 z1" src="../img/BestBuyToCoinbase.png" />
     <div class="info">
       <h2>Find out how to quickly leverage the Best Buy API.</h2>
     </div>
